--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>我目前在国防科技大学计算机学院攻读博士学位，师从教授。
 本人已于2022年6月从<a href="http://www.csu.edu.cn/">中南大学</a> <a href="https://cse.csu.edu.cn/">计算机学院</a>获得硕士学位。
 在此之前, 我于2016年6月在 <a href="https://www.scuec.edu.cn/">大连工业</a> 计算机科学学院 控制科学与工程专业获得了硕士学位, 专业排名:(1/56)。</p>
-<p>我的研究兴趣主要包括: 图神经网络, 图数据挖掘, 机器学习, 智慧交通, 无线传感器网络, 边缘计算，云计算 等。</p>
+<p>我的研究兴趣主要包括: 图神经网络, 图数据挖掘, 机器学习 等。</p>
 <h2>教育经历</h2>
 <table class="imgtable"><tr><td>
 <a href="https://www.csu.edu.cn/"><img src="picture/csu_logo.png" alt="中南大学" width="80px" /></a>&nbsp;</td>
