--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="layout-content">
 <div id="toptitle">
-<h1>赵德赞 (Aikun Xu)</h1>
+<h1>赵德赞 (Dezan Zhao)</h1>
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://zhaodezan.github.io/"><img src="picture/Aikun_Xu.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
